labed in notebook

--- a/src/MoistureSatelliteTest/testMasking2.ipynb
+++ b/src/MoistureSatelliteTest/testMasking2.ipynb
@@ -455,21 +455,213 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
+   "outputs": [],
+   "source": [
+    "PGADMIN_EMAIL='email@email.com'\n",
+    "PGADMIN_PW='password'\n",
+    "\n",
+    "# Credentials for PostgreSQL\n",
+    "PG_DB='CGC'\n",
+    "PG_USER='user'\n",
+    "PG_PW='password'\n",
+    "PG_ADDR = 'woodswallow-04.cs.umanitoba.ca'\n",
+    "PG_PORT=5432\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\engine\\base.py\", line 145, in __init__\n",
+      "    self._dbapi_connection = engine.raw_connection()\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\engine\\base.py\", line 3288, in raw_connection\n",
+      "    return self.pool.connect()\n",
+      "           ^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\pool\\base.py\", line 452, in connect\n",
+      "    return _ConnectionFairy._checkout(self)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\pool\\base.py\", line 1267, in _checkout\n",
+      "    fairy = _ConnectionRecord.checkout(pool)\n",
+      "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\pool\\base.py\", line 716, in checkout\n",
+      "    rec = pool._do_get()\n",
+      "          ^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\pool\\impl.py\", line 169, in _do_get\n",
+      "    with util.safe_reraise():\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\util\\langhelpers.py\", line 147, in __exit__\n",
+      "    raise exc_value.with_traceback(exc_tb)\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\pool\\impl.py\", line 167, in _do_get\n",
+      "    return self._create_connection()\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\pool\\base.py\", line 393, in _create_connection\n",
+      "    return _ConnectionRecord(self)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\pool\\base.py\", line 678, in __init__\n",
+      "    self.__connect()\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\pool\\base.py\", line 902, in __connect\n",
+      "    with util.safe_reraise():\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\util\\langhelpers.py\", line 147, in __exit__\n",
+      "    raise exc_value.with_traceback(exc_tb)\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\pool\\base.py\", line 898, in __connect\n",
+      "    self.dbapi_connection = connection = pool._invoke_creator(self)\n",
+      "                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\engine\\create.py\", line 637, in connect\n",
+      "    return dialect.connect(*cargs, **cparams)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\engine\\default.py\", line 615, in connect\n",
+      "    return self.loaded_dbapi.connect(*cargs, **cparams)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\psycopg2\\__init__.py\", line 122, in connect\n",
+      "    conn = _connect(dsn, connection_factory=connection_factory, **kwasync)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "psycopg2.OperationalError: connection to server at \"woodswallow-04.cs.umanitoba.ca\" (172.31.29.35), port 5432 failed: Connection timed out (0x0000274C/10060)\n",
+      "\tIs the server running on that host and accepting TCP/IP connections?\n",
+      "\n",
+      "\n",
+      "The above exception was the direct cause of the following exception:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3460, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Temp\\ipykernel_4596\\475945327.py\", line 2, in <module>\n",
+      "    conn = db.connect()\n",
+      "           ^^^^^^^^^^^^\n",
+      "  File \"C:\\jay projects\\school\\COMP 4560\\CGC_Grain_Outcome_Predictions\\src\\MoistureSatelliteTest\\DataService.py\", line 21, in connect\n",
+      "    self.conn = self.engine.connect()\n",
+      "                ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\engine\\base.py\", line 3264, in connect\n",
+      "    return self._connection_cls(self)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\engine\\base.py\", line 147, in __init__\n",
+      "    Connection._handle_dbapi_exception_noconnection(\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\engine\\base.py\", line 2426, in _handle_dbapi_exception_noconnection\n",
+      "    raise sqlalchemy_exception.with_traceback(exc_info[2]) from e\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\engine\\base.py\", line 145, in __init__\n",
+      "    self._dbapi_connection = engine.raw_connection()\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\engine\\base.py\", line 3288, in raw_connection\n",
+      "    return self.pool.connect()\n",
+      "           ^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\pool\\base.py\", line 452, in connect\n",
+      "    return _ConnectionFairy._checkout(self)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\pool\\base.py\", line 1267, in _checkout\n",
+      "    fairy = _ConnectionRecord.checkout(pool)\n",
+      "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\pool\\base.py\", line 716, in checkout\n",
+      "    rec = pool._do_get()\n",
+      "          ^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\pool\\impl.py\", line 169, in _do_get\n",
+      "    with util.safe_reraise():\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\util\\langhelpers.py\", line 147, in __exit__\n",
+      "    raise exc_value.with_traceback(exc_tb)\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\pool\\impl.py\", line 167, in _do_get\n",
+      "    return self._create_connection()\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\pool\\base.py\", line 393, in _create_connection\n",
+      "    return _ConnectionRecord(self)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\pool\\base.py\", line 678, in __init__\n",
+      "    self.__connect()\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\pool\\base.py\", line 902, in __connect\n",
+      "    with util.safe_reraise():\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\util\\langhelpers.py\", line 147, in __exit__\n",
+      "    raise exc_value.with_traceback(exc_tb)\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\pool\\base.py\", line 898, in __connect\n",
+      "    self.dbapi_connection = connection = pool._invoke_creator(self)\n",
+      "                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\engine\\create.py\", line 637, in connect\n",
+      "    return dialect.connect(*cargs, **cparams)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sqlalchemy\\engine\\default.py\", line 615, in connect\n",
+      "    return self.loaded_dbapi.connect(*cargs, **cparams)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\psycopg2\\__init__.py\", line 122, in connect\n",
+      "    conn = _connect(dsn, connection_factory=connection_factory, **kwasync)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "sqlalchemy.exc.OperationalError: (psycopg2.OperationalError) connection to server at \"woodswallow-04.cs.umanitoba.ca\" (172.31.29.35), port 5432 failed: Connection timed out (0x0000274C/10060)\n",
+      "\tIs the server running on that host and accepting TCP/IP connections?\n",
+      "\n",
+      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 2057, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1288, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1177, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1030, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 960, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(record))\n",
+      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 870, in format_record\n",
+      "    frame_info.lines, Colors, self.has_colors, lvals\n",
+      "    ^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 704, in lines\n",
+      "    return self._sd.lines\n",
+      "           ^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\stack_data\\utils.py\", line 144, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\stack_data\\core.py\", line 734, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "             ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\stack_data\\utils.py\", line 144, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\stack_data\\core.py\", line 677, in included_pieces\n",
+      "    scope_pieces = self.scope_pieces\n",
+      "                   ^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\stack_data\\utils.py\", line 144, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\stack_data\\core.py\", line 614, in scope_pieces\n",
+      "    scope_start, scope_end = self.source.line_range(self.scope)\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\stack_data\\core.py\", line 178, in line_range\n",
+      "    return line_range(self.asttext(), node)\n",
+      "                      ^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\executing\\executing.py\", line 428, in asttext\n",
+      "    self._asttext = ASTText(self.text, tree=self.tree, filename=self.filename)\n",
+      "                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\asttokens\\asttokens.py\", line 307, in __init__\n",
+      "    super(ASTText, self).__init__(source_text, filename)\n",
+      "  File \"C:\\Users\\jaydo\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\asttokens\\asttokens.py\", line 44, in __init__\n",
+      "    source_text = six.ensure_text(source_text)\n",
+      "                  ^^^^^^^^^^^^^^^\n",
+      "AttributeError: module 'six' has no attribute 'ensure_text'\n"
      ]
     }
    ],
    "source": [
-    "load_dotenv()\n",
-    "import os\n",
-    "PG_USER = os.getenv('POSTGRES_USER')\n",
-    "print(PG_USER)"
+    "\n",
+    "db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
+    "conn = db.connect()"
    ],
    "metadata": {
     "collapsed": false
@@ -479,7 +671,9 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "agRegions = loadGeometry(conn)"
+   ],
    "metadata": {
     "collapsed": false
    }
@@ -488,7 +682,18 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "def addRegions(df: pd.DataFrame, agRegions: gpd.GeoDataFrame) -> gpd.GeoDataFrame:\n",
+    "    temp_df = gpd.GeoDataFrame(df, crs=\"EPSG:4326\", geometry=gpd.points_from_xy(df.lon, df.lat)) # Creates geometry from df using lon and lat as cords to create points (points being geometry)\n",
+    "    temp_df = df.to_crs(crs='EPSG:3347')                                                         # Changes the points projection to match the agriculture regions of EPSG:3347\n",
+    "    temp_df = gpd.sjoin(df, agRegions, how='left', predicate='within')                           # Join the two dataframes based on which points fit within what agriculture regions\n",
+    "\n",
+    "    temp_df.drop(columns=['geometry', 'index_right'], inplace=True)\n",
+    "    temp_df = temp_df[temp_df['cr_num'].notna()]                               # Take rows that are valid numbers\n",
+    "    temp_df[['cr_num']] = temp_df[['cr_num']].astype(int)\n",
+    "\n",
+    "    return temp_df"
+   ],
    "metadata": {
     "collapsed": false
    }
@@ -497,7 +702,9 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "final_df = addRegions(df, agRegions)"
+   ],
    "metadata": {
     "collapsed": false
    }
@@ -506,16 +713,9 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "source": [
+    "final_df"
+   ],
    "metadata": {
     "collapsed": false
    }
