deleted un necessary code

--- a/src/MoistureSatelliteTest/testMasking2.ipynb
+++ b/src/MoistureSatelliteTest/testMasking2.ipynb
@@ -9,7 +9,6 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "\n",
     "import pandas as pd\n",
     "import xarray as xr\n",
     "import geopandas as gpd\n",
@@ -688,7 +687,7 @@
     "    temp_df = df.to_crs(crs='EPSG:3347')                                                         # Changes the points projection to match the agriculture regions of EPSG:3347\n",
     "    temp_df = gpd.sjoin(df, agRegions, how='left', predicate='within')                           # Join the two dataframes based on which points fit within what agriculture regions\n",
     "\n",
-    "    temp_df.drop(columns=['geometry', 'index_right'], inplace=True)\n",
+    "    temp_df.drop(columns=['geometry'], inplace=True)\n",
     "    temp_df = temp_df[temp_df['cr_num'].notna()]                               # Take rows that are valid numbers\n",
     "    temp_df[['cr_num']] = temp_df[['cr_num']].astype(int)\n",
     "\n",
@@ -917,32 +916,32 @@
     }
    ],
    "source": [
-    "df = pd.DataFrame(points_in_region)\n",
-    "df\n",
-    "gdfStations = gpd.GeoDataFrame(df, geometry=gpd.points_from_xy(df.lon, df.lat))\n",
-    "gdfRegions = loadGeometry()\n",
-    "gdfStationRegion = gpd.sjoin( gdfStations, gdfRegions, how=\"left\" , op=\"within\" )\n",
-    "\n",
-    "db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
-    "conn = db.connect()\n",
-    "def loadGeometry(conn: sq.engine.Connection) -> gpd.GeoDataFrame:\n",
-    "    query = sq.text('select car_name, geometry FROM public.census_ag_regions')\n",
-    "    agRegions = gpd.GeoDataFrame.from_postgis(query, conn, crs='EPSG:3347', geom_col='geometry')\n",
-    "\n",
-    "    return agRegions\n",
-    "\n",
-    "def addRegions(df, agRegions: gpd.GeoDataFrame):\n",
-    "    df['region'] = None\n",
-    "    \n",
-    "    for index, data in df.iterrows():\n",
-    "        point = Point(data['longitude'], data['latitude'])  # creates geometry for the current point                      \n",
-    "        point = gpd.GeoSeries(point, crs='EPSG:4326')       # transforms the geometry into a geoseries and sets the projection to common (lon, lat)\n",
-    "        point = point.to_crs(crs='EPSG:3347')               # changes the points projection to match the agriculture regions\n",
-    "        data['region'] = calcAgRegion(agRegions, point)     # adds coordinate region's name (or None if the region is not of interest)    \n",
-    "    \n",
-    "    df.dropna(subset=['region'], inplace=True)          # drops all rows where region is None\n",
-    "\n",
-    "    return df\n",
+    "# df = pd.DataFrame(points_in_region)\n",
+    "# df\n",
+    "# gdfStations = gpd.GeoDataFrame(df, geometry=gpd.points_from_xy(df.lon, df.lat))\n",
+    "# gdfRegions = loadGeometry()\n",
+    "# gdfStationRegion = gpd.sjoin( gdfStations, gdfRegions, how=\"left\" , op=\"within\" )\n",
+    "#\n",
+    "# db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
+    "# conn = db.connect()\n",
+    "# def loadGeometry(conn: sq.engine.Connection) -> gpd.GeoDataFrame:\n",
+    "#     query = sq.text('select car_name, geometry FROM public.census_ag_regions')\n",
+    "#     agRegions = gpd.GeoDataFrame.from_postgis(query, conn, crs='EPSG:3347', geom_col='geometry')\n",
+    "#\n",
+    "#     return agRegions\n",
+    "#\n",
+    "# def addRegions(df, agRegions: gpd.GeoDataFrame):\n",
+    "#     df['region'] = None\n",
+    "#\n",
+    "#     for index, data in df.iterrows():\n",
+    "#         point = Point(data['longitude'], data['latitude'])  # creates geometry for the current point\n",
+    "#         point = gpd.GeoSeries(point, crs='EPSG:4326')       # transforms the geometry into a geoseries and sets the projection to common (lon, lat)\n",
+    "#         point = point.to_crs(crs='EPSG:3347')               # changes the points projection to match the agriculture regions\n",
+    "#         data['region'] = calcAgRegion(agRegions, point)     # adds coordinate region's name (or None if the region is not of interest)\n",
+    "#\n",
+    "#     df.dropna(subset=['region'], inplace=True)          # drops all rows where region is None\n",
+    "#\n",
+    "#     return df\n",
     "\n",
     "\n"
    ]
