--- a/src/MoistureSatelliteTest/PullSampleMoistureData.ipynb
+++ b/src/MoistureSatelliteTest/PullSampleMoistureData.ipynb
@@ -61,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "netcdf_file_path = './data/perfectDemo.nc'\n",
+    "netcdf_file_path = './data/images/2004/ESACCI-SOILMOISTURE-L3S-SSMV-COMBINED_ADJUSTED-20040605000000-fv07.1.nc'\n",
     "queryHandler = QueryHandler()\n",
     "\n",
     "db = DataService(PG_DB, PG_ADDR, PG_PORT, PG_USER, PG_PW)\n",
